# IOB-util

./: .gitmodules  README.md  genindex.html  index.html  iob_util.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  util.html
_modules/: index.html
_modules/iob_util/: util.html
_sources/: index.rst.txt  util.rst.txt
docs/: conf.py  index.rst  iob_util.rst  util.rst
docs/_build/doctrees/: environment.pickle  index.doctree  iob_util.doctree  util.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  util.html
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/iob_util/: util.html
docs/_build/html/_sources/: index.rst.txt  util.rst.txt
html/: py-modindex.html  searchindex.js
iob_util/: __init__.py  util.py
tests/: test_iob_util.py
